--- a/photoshare/users/templates/users/search_users.html
+++ b/photoshare/users/templates/users/search_users.html
@@ -1,5 +1,5 @@
-{% extends "feed/layout.html" %}{%
-    endblock cssfiles %} {% block searchform %}
+{% extends "feed/layout.html" %} {% load static %} {% block cssfiles %} 
+{% endblock cssfiles %} {% block searchform %}
     <form
       class="form-inline my-2 my-lg-0 ml-5"
       action="{% url 'search_users' %}"
