--- a/photoshare/users/templates/users/users_list.html
+++ b/photoshare/users/templates/users/users_list.html
@@ -33,7 +33,7 @@
               <small class="float-right">
                 <a
                   class="btn btn-primary mr-2"
-                  href="{% url 'send_friend_request' user_p.id %}"
+                  href="{% url 'send_friend_request' user_p.user_id %}"
                   >Add Friend</a
                 >
               </small>
@@ -41,7 +41,7 @@
               <small class="float-right">
                 <a
                   class="btn btn-warning mr-2"
-                  href="{% url 'cancel_friend_request' user_p.id %}"
+                  href="{% url 'cancel_friend_request' user_p.user_id %}"
                   >Cancel Request</a
                 >
               </small>
