--- a/photoshare/feed/templates/feed/layout.html
+++ b/photoshare/feed/templates/feed/layout.html
@@ -18,7 +18,7 @@
     <title>QuickPost</title>
 </head>
 
-<body>
+<body style="background-image: url('/media/background.jpeg');">
 	{% block navbar %}
 			{% include 'feed/navbar.html' %}
 			{% endblock navbar %}
